tests/negative/scope/interface-name-imported-and-defined/beta.smol
package beta;

import alpha:Foo;

interface Foo {}
